Ders 36. Kurs tekrar izlendi.

--- a/UdemyIdentityServer.Client1/Views/User/Index.cshtml
+++ b/UdemyIdentityServer.Client1/Views/User/Index.cshtml
@@ -3,6 +3,8 @@
     ViewData["Title"] = "Index";
 }
 
+<a asp-action="LogOut" class="btn btn-primary">Çıkış Yap</a>
+
 <h3>Bu sayfayı sadece üye olan kullanıcılar görebilir.</h3>
 
 <h4>Claim verileri</h4>
