--- a/UdemyIdentityServer.Client1/Views/User/Index.cshtml
+++ b/UdemyIdentityServer.Client1/Views/User/Index.cshtml
@@ -5,6 +5,8 @@
 
 <a asp-action="LogOut" class="btn btn-primary">Çıkış Yap</a>
 
+<a asp-action="GetRefreshToken" class="btn btn-success">Refresh Token Yenile</a>
+
 <h3>Bu sayfayı sadece üye olan kullanıcılar görebilir.</h3>
 
 <h4>Claim verileri</h4>
