--- a/UdemyIdentityServer.Client1/Views/User/Index.cshtml
+++ b/UdemyIdentityServer.Client1/Views/User/Index.cshtml
@@ -9,6 +9,8 @@
 
 <h3>Bu sayfayı sadece üye olan kullanıcılar görebilir.</h3>
 
+<h2>Hoşgeldin @User.Identity.Name</h2>
+
 <h4>Claim verileri</h4>
 
 <table class="table table-bordered">
